force-app/main/default/objects/Close_Case__mdt/Close_Case__mdt.object-meta.xml
<CustomObject>
    <label>Close Case</label>
    <pluralLabel>Close Case</pluralLabel>
</CustomObject>