force-app/main/default/objects/Close_Case__mdt/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <metadataRelationshipControllingField>Close_Case__mdt.Object_Api_Name__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Close_Case</relationshipLabel>
    <relationshipName>Close_Case</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>