force-app/main/default/objects/Close_Case__mdt/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Close_Case</relationshipLabel>
    <relationshipName>Close_Case</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>